examples/good/09-04-overriding-and-static-binding.elina
fn f(): int {
  var x: int = 16;
  {
    var x: int = 8;
    return x;
  }
}

fn main(): void {
  var x: int = f();
  {
    var x: int = -1;
  }
  printInt(x);
}