examples/bad/declare-void-variable.elina
fn main(): void {
  var voidVariable: void;
}